Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2009-01-29 Stephane Letz  <letz@grame.fr>

	* Support for "-h" option in internal clients to print the parameters. 

2009-01-28 Stephane Letz  <letz@grame.fr>

	* Support for BIG_ENDIAN machines in NetJack2.

2009-01-27 Stephane Letz  <letz@grame.fr>

	* Better recovery of network overload situations, now "resynchronize" by skipping cycles."

2009-01-26 Stephane Letz  <letz@grame.fr>

	* Fix JackNetInterface::SetNetBufferSize for socket buffer size computation and JackNetMasterInterface::DataRecv if synch packet is received, various cleanup.
	* Fix in JackAlsaAdapter::Open.
	* Simplify audio packet order verification.
	* Set default mode to 'slow' in JackNetDriver and JackNetAdapter.

2009-01-19 Stephane Letz  <letz@grame.fr>

	* Synchronize ALSA backend code with JACK1 one.

2009-01-17 Stephane Letz  <letz@grame.fr>

	* JackMessageBuffer was using thread "Stop" scheme in destructor, now use the safer thread "Kill" way. 

2009-01-14 Stephane Letz  <letz@grame.fr>

	* Cleanup server starting code for clients directly linked with libjackserver.so.

2009-01-07 Stephane Letz  <letz@grame.fr>

	* Use up to BUFFER_SIZE_MAX frames in midi ports, fix for ticket #117.

2009-01-05 Stephane Letz  <letz@grame.fr>

	* Synchronize jack2 public headers with jack1 ones. 
	* Implement jack_client_real_time_priority and jack_client_max_real_time_priority API.

2008-12-18 Stephane Letz  <letz@grame.fr>

	* For ALSA driver, synchronize with latest jack1 memops functions. 

2008-12-17 Stephane Letz  <letz@grame.fr>

	* Use JACK_DRIVER_DIR variable in internal clients loader.

2008-12-16 Stephane Letz  <letz@grame.fr>
