@@ -276,6 +276,8 @@ namespace Jack
     SERVER_EXPORT void SessionParamsNToH ( session_params_t* src_params, session_params_t* dst_params );
     SERVER_EXPORT void PacketHeaderHToN ( packet_header_t* src_header, packet_header_t* dst_header );
     SERVER_EXPORT void PacketHeaderNToH ( packet_header_t* src_header, packet_header_t* dst_header );
+    SERVER_EXPORT void MidiBufferHToN ( JackMidiBuffer* src_buffer, JackMidiBuffer* dst_buffer );
+    SERVER_EXPORT void MidiBufferNToH ( JackMidiBuffer* src_buffer, JackMidiBuffer* dst_buffer );
     //display session parameters
     SERVER_EXPORT void SessionParamsDisplay ( session_params_t* params );
     //display packet header
